--- a/app/app/src/main/res/layout/activity_main.xml
+++ b/app/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
         android:layout_marginBottom="10dp"
         android:gravity="center"
         android:text="@string/movie_search"
+        android:textColor="@color/black"
         android:textAlignment="center"
         android:textSize="12pt"
         app:layout_constraintBottom_toTopOf="@+id/recyclerView_movies"
