--- a/app/app/src/main/res/layout/activity_movie_item.xml
+++ b/app/app/src/main/res/layout/activity_movie_item.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android="http://schemas.android.com/apk/res/android">
+
     <data>
         <variable
             name="Movie"
@@ -13,27 +14,28 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:weightSum="80"
-        tools:ignore="MissingConstraints">
+        tools:ignore="MissingConstraints"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp">
 
         <ImageView
             android:id="@+id/movieimage"
-            android:layout_width="199dp"
+            android:layout_width="143dp"
             android:layout_height="150dp"
             android:layout_marginTop="@dimen/standard_maegin"
-            android:textColor="@color/black"
             android:layout_weight="15"
             android:baselineAligned="false"
-            android:padding="8dp"
+            android:padding="2dp"
             android:src="@drawable/movie_loading"
+            android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <LinearLayout
             android:id="@+id/linearLayout"
-            android:layout_width="186dp"
-            android:layout_height="130dp"
+            android:layout_width="match_parent"
+            android:layout_height="138dp"
             android:layout_marginTop="@dimen/standard_maegin"
             android:layout_marginEnd="@dimen/standard_maegin"
             android:layout_weight="85"
@@ -46,19 +48,22 @@
             <TextView
                 android:id="@+id/moviename"
                 android:layout_width="match_parent"
-                android:layout_height="52dp"
+                android:layout_height="wrap_content"
                 android:baselineAligned="false"
                 android:text="@string/title"
+                android:textColor="@color/black"
                 android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/vote_average"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="1dp"
                 android:layout_weight="70"
                 android:baselineAligned="false"
                 android:text="@string/vote_average"
                 android:textAlignment="textStart"
+                android:layout_marginTop="@dimen/standard_maegin"
+
                 android:textSize="15sp" />
 
             <TextView
@@ -68,6 +73,7 @@
                 android:layout_weight="70"
                 android:baselineAligned="false"
                 android:text="@string/release_date"
+                android:layout_marginTop="@dimen/standard_maegin"
                 android:textAlignment="textStart"
                 android:textSize="15sp" />
 
