--- a/app/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/app/src/main/res/layout/activity_movie_details.xml
@@ -31,6 +31,7 @@
             android:layout_width="411dp"
             android:layout_height="wrap_content"
             android:gravity="center"
+            android:textColor="@color/black"
             android:text="@{Movie.movie_name}"
             android:textSize="36sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -44,7 +45,7 @@
             android:layout_width="wrap_content"
             android:layout_height="23dp"
             android:layout_marginStart="@dimen/standard_maegin"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="26dp"
             android:text="@{Movie.vote_average}"
             android:textSize="16sp"
             app:layout_constraintStart_toEndOf="@+id/imageView2"
@@ -89,7 +90,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/standard_maegin"
-            android:layout_marginTop="@dimen/standard_maegin"
+            android:layout_marginTop="26dp"
             app:layout_constraintStart_toEndOf="@+id/imageView"
             app:layout_constraintTop_toBottomOf="@+id/tvMovieName"
             app:srcCompat="@drawable/rate" />
