--- a/app/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/app/src/main/res/layout/activity_movie_details.xml
@@ -13,7 +13,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/background"
+        android:background="@drawable/moviebackground3"
         tools:context=".MovieDetails">
 
         <ImageView
