--- a/app/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/app/src/main/res/layout/activity_movie_details.xml
@@ -13,7 +13,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/moviebackground3"
+        android:background="@drawable/background"
         tools:context=".MovieDetails">
 
         <ImageView
@@ -117,17 +117,19 @@
 
         <ImageButton
             android:id="@+id/btPrev"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="53dp"
+            android:layout_height="50dp"
+            android:backgroundTintMode="src_in"
             android:minHeight="48dp"
             android:onClick="Prev"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.234"
+            app:layout_constraintHorizontal_bias="0.209"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvDescription"
-            app:layout_constraintVertical_bias="0.782"
+            app:layout_constraintVertical_bias="0.723"
             app:srcCompat="@drawable/back2"
-            tools:ignore="SpeakableTextPresentCheck" />
+            tools:ignore="SpeakableTextPresentCheck"
+            android:background="@null" />
 
     </androidx.constraintlayout.widget.ConstraintLayout></layout>
